Remove Chinese info

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -258,7 +258,7 @@
                                                 <p>Click to enter cDNA sequence or drag files here</p>
                                                 <small>FASTA, TXT supported</small>
                                             </div>
-                                            <textarea id="reformerSequence" rows="6" placeholder="Enter cDNA sequence (ATCGN characters only)&#10;Example:&#10;ATGCGATCGATCGATCGA&#10;TTCGAATTCGAATTCGAA" style="display: none;"></textarea>
+                                            <textarea id="reformerSequence" rows="6" placeholder="Enter cDNA sequence (ATCG characters only)&#10;Example:&#10;ATGCGATCGATCGATCGA&#10;TTCGAATTCGAATTCGAA" style="display: none;"></textarea>
                                             <input type="file" id="reformerSequenceFileInput" accept=".fasta,.fa,.txt" style="display: none;">
                                         </div>
                                     </div>
