--- a/app/static/index.html
+++ b/app/static/index.html
@@ -40,6 +40,12 @@
                 </div>
             </a>
             <div class="navbar-nav">
+                <div class="github-toggle">
+                    <button class="btn btn-outline-light btn-sm" id="githubButton" onclick="openGitHub()">
+                        <i class="fab fa-github"></i>
+                        <span>GitHub</span>
+                    </button>
+                </div>
                 <div class="ai-assistant-toggle">
                     <button class="btn btn-outline-light btn-sm" id="aiAssistantToggle" onclick="toggleAIAssistant()">
                         <i class="fas fa-robot"></i>
@@ -55,6 +61,31 @@
             </div>
         </div>
     </nav>
+
+    <!-- Banner Section -->
+    <section class="banner-section" id="bannerSection">
+        <div class="banner-background">
+        </div>
+        <div class="banner-particles">
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+        </div>
+        <div class="banner-content">
+            <div class="banner-text">
+                <h1 class="banner-title">RNA-Factory</h1>
+                <p class="banner-subtitle">Advanced RNA Analysis Platform</p>
+                <p class="banner-description">Discover the power of AI-driven RNA research and analysis</p>
+            </div>
+        </div>
+    </section>
 
     <div class="main-container">
         <!-- AI Assistant Sidebar -->
