--- a/app/static/index.html
+++ b/app/static/index.html
@@ -23,6 +23,14 @@
 <body>
     <!-- Loading Page -->
     <div class="loading-page" id="loadingPage">
+        <div class="loading-particles">
+            <div class="loading-particle"></div>
+            <div class="loading-particle"></div>
+            <div class="loading-particle"></div>
+            <div class="loading-particle"></div>
+            <div class="loading-particle"></div>
+            <div class="loading-particle"></div>
+        </div>
         <div class="loading-content">
             <div class="loading-logo">
                 <i class="fas fa-dna"></i>
@@ -92,15 +100,19 @@
         <div class="ai-sidebar" id="aiSidebar">
             <div class="ai-sidebar-header">
                 <div class="ai-header-content">
-                    <button class="ai-close-btn" onclick="toggleAIAssistant()" title="Close AI Assistant">
-                        <i class="fas fa-times"></i>
-                    </button>
-                    <h5>AI Assistant</h5>
-                    <i class="fas fa-robot"></i>
-                </div>
-                <div class="ai-status">
-                    <span class="status-indicator" id="aiStatusIndicator"></span>
-                    <span class="status-text" id="aiStatusText">Ready</span>
+                    <div class="ai-title-section">
+                        <i class="fas fa-robot"></i>
+                        <h5>AI Assistant</h5>
+                    </div>
+                    <div class="ai-header-actions">
+                        <div class="ai-status">
+                            <span class="status-indicator" id="aiStatusIndicator"></span>
+                            <span class="status-text" id="aiStatusText">Ready</span>
+                        </div>
+                        <button class="ai-close-btn" onclick="toggleAIAssistant()" title="Close AI Assistant">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
             
